Write test script for Task and Category endpoints.

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,9 @@ djangorestframework = "*"
 django-debug-toolbar = "*"
 
 [dev-packages]
+pytest = "*"
+pytest-django = "*"
+model-bakery = "*"
 
 [requires]
 python_version = "3.12"
