--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,23 @@ venv.bak/
 
 # celery 
 celerybeat-schedule.* 
+
+
+
+# Logs and temporary files
+tmp/
+*.sqlite3  # Exclude SQLite database (use only for development)
+
+# Static and media files
+staticfiles/
+media/
+
+# IDE-specific files
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# OS-generated files
+.DS_Store
+Thumbs.db
