Modify: add priority field in Task Model and update the serializer.

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ django-debug-toolbar = "*"
 python-dotenv = "*"
 drf-spectacular = "*"
 drf-yasg = "*"
+django-filter = "*"
 
 [dev-packages]
 pytest = "*"
